[metadata]
name = bstabdiff
version = 0.1.0
author = Al Zadid Sultan Bin Habib, Md Younus Ahamed, Prashnna Kumar Gyawali, Gianfranco Doretto, Donald A. Adjeroh
description = Block-Subunit Diffusion Priors for High-Dimensional Tabular Data Generation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/zadid6pretam/BSTabDiff
project_urls =
    Paper = https://openreview.net/forum?id=RKNDy0KhGT
    Workshop = https://delta-workshop.github.io/DeLTa2026/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy==2.2.6
    torch>=2.9.1
    pandas==2.3.3
    scikit-learn==1.7.2
    catboost==1.2.8
    tabpfn==6.3.1
include_package_data = True

[options.packages.find]
include =
    bstabdiff
    bstabdiff.*
